CHANGE [lang:english] Complete internal re-factorisation of the application code. The code was also optimized.

FIX Na text úloh v editore zostavy úloh je teraz aplikované zvýrazňovanie kódu a tiež preklad rovníc.
FIX [lang:english] Code highlighting as well as equation translation are now applied to the task text in the task set editor.

END VERSION

VERSION 1.6.9 | 2021-09-21

FIX Opravené zobrazovanie komentárov od učitela k študentskému riešeniu úloh.
FIX [lang:english] Fixed display of teachers comment to the student solution.

CHANGE Odteraz sa študentom zobrazujú iba úlohy pred limitom odovzdania riešení. Staršie úlohy možno zobraziť prepínačom.
CHANGE [lang:english] From now only the task before deadline are shown to students by default. Older tasks may be displayed by checking the checkbox.

END VERSION

VERSION 1.6.8 | 2019-02-22

FIX Niekolko drobných opráv.
FIX [lang:english] Several small fixes.

CHANGE Kurz môže byť vytvorený / upravený s 0 bodmi na odobratie pri nestihutí termínov odovzdania úloh.
CHANGE [lang:english] The course can be created / edited with 0 points to withdraw when the deadline for submitting tasks is not met.

CHANGE Hodnotiaci formulár môže byť odoslaný bez vyplnenia bodov.
CHANGE [lang:english] The evaluation form can be sent without filling in the points.

END VERSION

VERSION 1.6.7 | 2018-09-22

FIX Niekolko drobných opráv.
FIX [lang:english] Several small fixes.

END VERSION

VERSION 1.6.6 | 2018-04-20

CHANGE Navigácia v administrácii sa odteraz otvára kliknutím na ikonu v ľavo hore. Automatické otváranie bolo zrušené.
CHANGE [lang:english] In administration, the navigation is now opening by icon in top left corner. Automatic opening was canceled.

END VERSION

VERSION 1.6.5 | 2018-03-02

NEW Pridané odkazy na rýchle prepínanie medzi zoznamom obsahu, zoznamom skupín obsahu a zotriedením obsahu/skupín.